--- a/TODO.txt
+++ b/TODO.txt
@@ -34,8 +34,10 @@
   to spend evaluating should be independent of the number of children in the
   family.
 
+* [test] Test that let bindings have their namespaces enforced. 
+
 * [lang] Add anonymous type let support.
- - Try '%' for kind level 0 in syntax?
+ - Try '&' for kind level 0 in syntax?
 * [lang] Remove struct import syntax in favor of let or a new multi-import format.
 * [lang] Add support for abstract types?
 * [lang] Document the runtime memory model,
