--- a/TODO.txt
+++ b/TODO.txt
@@ -21,8 +21,12 @@
  - Maybe have a way to list free vars in an expression and use that to compute
    'recursive' ahead of time?
 
-* [type] Assert that FbleNewVarType has TYPE namespace name?
-* [type] Add test for checking of namespace in arg to POLY_EXPR?
+* [compile] Test that let bindings have their namespaces enforced. 
+* [compile] Assert that FbleNewVarType has TYPE namespace name?
+* [compile] Add test for checking of namespace in arg to POLY_EXPR?
+* [compile] Test and fix error message for type of anonymous type let values.
+ - The type should be the computed type for the value, not the introduced
+   abstract type?
 
 * [profile] Figure out how to handle profiling threads better
  - Separate EXIT_BLOCK from EXIT_SCOPE to remove spurious calls to enter block
@@ -36,8 +40,6 @@
   far down the family tree the child belongs. The amount of time a family gets
   to spend evaluating should be independent of the number of children in the
   family.
-
-* [test] Test that let bindings have their namespaces enforced. 
 
 * [lang] Add anonymous type let support.
  - Try '&' for kind level 0 in syntax?
